# forgen

./: .gitignore  Cargo.toml  ROADMAP.md
example/: Cargo.toml  build.sh  typeshare.sh
example/android/: settings.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/androidTest/java/tech/forgen/example/: ExampleInstrumentedTest.kt
example/android/app/src/main/java/tech/forgen/example/: MainActivity.kt
example/android/app/src/main/java/tech/forgen/example/rust/: types.kt
example/android/app/src/main/java/tech/forgen/example/rust/uniffi/example/: example.kt
example/android/app/src/main/java/tech/forgen/example/ui/theme/: Color.kt  Theme.kt  Type.kt
example/android/app/src/test/java/tech/forgen/example/: ExampleUnitTest.kt
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/example/: ContentView.swift  exampleApp.swift  rust.swift  types.swift
example/ios/example.xcodeproj/: project.pbxproj
example/ios/example.xcodeproj/project.xcworkspace/xcuserdata/alexandrehanot.xcuserdatad/: UserInterfaceState.xcuserstate
example/ios/rust.xcframework/: Info.plist
example/ios/rust.xcframework/ios-arm64-simulator/Headers/: exampleFFI.h
example/ios/rust.xcframework/ios-arm64/Headers/: module.modulemap
example/src/: app.rs  lib.rs  signal.rs
example/web/: bun.lockb
example/web/src/: App.tsx
forgen/: Cargo.toml
forgen-cli/: Cargo.toml
forgen-macros/: Cargo.toml
forgen-macros/src/: lib.rs
forgen/src/: fsm.rs
