[package]
name = "example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# forgen = { path = "../forgen" }
async-trait = "0.1.77"
forgen-macros = { path = "../forgen-macros/" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde-generate = "0.25.1"
serde-reflection = "0.3.6"
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.8"
tracing = "0.1.40"
tsify = "0.4.5"
typeshare = "1"
uniffi = { version = "0.26.1", features = ["cli"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[features]
